# 8puzzle

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  diagrama_de_desenvolvimento.excalidraw
.ai/task/: 01-theforge-poc.md  02-theforge-fase2-library-mode.md  README.md
documentation/: diagrama_de_desenvolvimento.excalidraw
src/: main.cpp  main_ftxui.cpp  main_theforge.cpp
src/8puzzle/core/: Board.cpp  Board.h  Peca.cpp  Peca.h  Tabuleiro.cpp  Tabuleiro.h  Tile.cpp  Tile.h
src/8puzzle/domain/: ApplicationGame.cpp  ApplicationGame.h  GamePlay.cpp  GamePlay.h  GameRouter.cpp  GameRouter.h  Record.h
src/8puzzle/domain/state/: StateEnum.h  StateGame.h
src/8puzzle/engine/: EngineManager.cpp  EngineManager.h  FPSManager.cpp  FPSManager.h  GameManager.cpp  GameManager.h  IGameObject.h  IRouter.h  IScene.h  SceneContainer.h  ScreenContainer.h  ServiceContainer.h
src/8puzzle/engine/service/: RouterService.cpp  RouterService.h
src/8puzzle/engine/service/repository/: SceneRepository.cpp  SceneRepository.h
src/8puzzle/game/: GamePlay.cpp  GameRouter.cpp  GameRouter.h  Record.h
src/8puzzle/game/core/: Board.cpp  Board.h  Tile.h
src/8puzzle/game/service/: ConfigurationService.h  GamePlayService.cpp  GamePlayService.h  RecordService.cpp  RecordService.h
src/8puzzle/game/service/repository/: ConfigurationRepository.cpp  ConfigurationRepository.h  FileRecordRepository.cpp  FileRecordRepository.h  GamePlayRepository.cpp  GamePlayRepository.h  RecordRepository.cpp  RecordRepository.h
src/8puzzle/game/state/: StateEnum.h  StateGame.h  StateGameFlow.h
src/8puzzle/logic/: PuzzleGameManage.cpp  PuzzleGameManage.h
src/8puzzle/logic/views/: Credit.cpp  Credit.h  IViewState.h  ViewState.h  ViewStateContainer.cpp  ViewStateContainer.h
src/8puzzle/screen/: Menu.cpp  Menu.h
src/8puzzle/screen/enums/: GameState.h  MenuGameState.cpp  MenuGameState.h
src/8puzzle/service/: ConfigurationService.cpp  GamePlayService.cpp  GamePlayService.h  RecordService.cpp  RecordService.h
src/platform/: EngineManager.cpp  EngineManager.h  FPSManager.cpp  FPSManager.h  Format.h  GameManager.cpp  GameManager.h  IGameManager.h  IGameObject.h  IGameStateManager.h  IScreen.h  IWindowManager.h  ScreenCache.h  ScreenContainer.h  ServiceContainer.h
src/platform/domain/: ApplicationGame.cpp  ApplicationGame.h  ExitSG.cpp  ExitSG.h  GameState.cpp  IStateGame.h  InitialSG.cpp  InitialSG.h  IntroductionSG.cpp  IntroductionSG.h  MenuSG.cpp  MenuSG.h
src/platform/domain/state/: StateGame.h
src/platform/ftxui/: BoardView.cpp  BoardView.h  Format.h  FtxuiSceneFactory.cpp  FtxuiSceneFactory.h  FtxuiWindowManager.cpp  FtxuiWindowManager.h  Keyboard.cpp  Keyboard.h
src/platform/ftxui/scene/: FtxuiExitScene.cpp  FtxuiExitScene.h  FtxuiGameOverScene.cpp  FtxuiGameOverScene.h  FtxuiGameScene.cpp  FtxuiGameScene.h  FtxuiMenuScene.cpp  FtxuiMenuScene.h  FtxuiRecordScene.cpp  FtxuiRecordScene.h  FtxuiScene.cpp  FtxuiScene.h  InstructionsScene.cpp  InstructionsScene.h  PlaceholderScene.cpp  PlaceholderScene.h  SplashScene.cpp  SplashScene.h
src/platform/terminal/: ExitScreen.cpp  ExitScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  InitialScreen.cpp  InitialScreen.h  IntroductionScreen.cpp  IntroductionScreen.h  MenuGameObject.cpp  MenuGameObject.h  MenuScreen.cpp  MenuScreen.h  RecordScreen.cpp  RecordScreen.h  TerminalGameManager.cpp  TerminalGameManager.h  TerminalGameStateManager.h  TerminalSceneFactory.cpp  TerminalSceneFactory.h  TerminalScreenFactory.cpp  TerminalScreenFactory.h  TerminalWindowManager.cpp  TerminalWindowManager.h  WindowManager.cpp  WindowManager.h
src/platform/terminal/scene/: ExitScene.cpp  ExitScene.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  InitialScene.cpp  InitialScene.h  IntroductionScene.cpp  IntroductionScene.h  MenuScene.cpp  MenuScene.h  RecordScene.cpp  RecordScene.h  TerminalScene.h
src/platform/terminal/screen/: ExitScreen.h  GameOverScene.cpp  GameOverScreen.cpp  GameOverScreen.h  GameScene.cpp  GameScreen.cpp  GameScreen.h  InitialScene.h  InitialScreen.cpp  InitialScreen.h  IntroductionScene.cpp  IntroductionScreen.cpp  IntroductionScreen.h  MenuScene.h  MenuScreen.cpp  MenuScreen.h  RecordScreen.cpp  RecordScreen.h
src/platform/theforge/PC_VS2019/: 8PuzzleForge.vcxproj  8PuzzleForgeLib.vcxproj  CengineAdapter.vcxproj  ForgeLibSpike.vcxproj  HelloForge.sln  HelloForge.vcxproj
src/platform/theforge/src/8PuzzleForge/: 8PuzzleForge.cpp  ForgeBoardView.cpp  ForgeBoardView.h  ForgeSceneFactory.cpp  ForgeSceneFactory.h  ForgeUi.cpp  ForgeUi.h  TheForgeWindowManager.cpp
src/platform/theforge/src/8PuzzleForge/scene/: ForgeExitScene.cpp  ForgeExitScene.h  ForgeGameOverScene.cpp  ForgeGameOverScene.h  ForgeGameScene.cpp  ForgeGameScene.h  ForgeInstructionsScene.cpp  ForgeInstructionsScene.h  ForgeMenuScene.cpp  ForgeMenuScene.h  ForgeRecordScene.cpp  ForgeRecordScene.h  ForgeScene.h  ForgeSplashScene.cpp  ForgeSplashScene.h
src/platform/theforge/src/8PuzzleForgeLib/: 8PuzzleForgeLib.cpp  PathStatement.txt
src/platform/theforge/src/CengineAdapter/: CengineAdapter.cpp
src/platform/theforge/src/CengineAdapter/Scripts/: README.txt
src/platform/theforge/src/ForgeLibSpike/: ForgeLibSpike.cpp  TheForgeWindowManager.cpp  TheForgeWindowManager.h
src/platform/theforge/src/HelloForge/: HelloForge.cpp
src/platform/theforge/src/HelloForge/GPUCfg/: gpu.cfg
src/platform/theforge/src/HelloForge/Shaders/FSL/: Shaders.list
test/: CMakeLists.txt
test/8puzzel/: TabuleiroTest.cpp
test/8puzzel/engine/: SceneContainerTest.cpp  ServiceContainerTest.cpp
test/8puzzel/game/: BoardTest.cpp
test/8puzzle/game/service/: RecordServiceTest.cpp
tools/: dist-theforge.ps1
